# OrdureX

./: .gitignore  README.md  docker-compose.yml  shell.nix
.github/workflows/: build-tests.yml  mirroring.yml  unity.yml
IOT/: .gitignore  CMakeLists.txt  IOT.ino  Makefile  README.md
IOT/cmake/: CompilerFlags.cmake  Findgoogletest.cmake
IOT/kicad/: #auto_saved_files#  .gitignore  ordurex-electronics.kicad_prl  ordurex-electronics.kicad_pro  ordurex-electronics.kicad_sch  ordurex.kicad_sym  poubelle0.kicad_sch.kicad_sch  poubelle1.kicad_sch  poubelle2.kicad_sch  poubelle3.kicad_sch  sym-lib-table  wifi.kicad_sch
IOT/main/: CMakeLists.txt  MqttClient.cpp  MqttClient.h  actuator.cpp  actuator.h  at.cpp  at.h  bin.cpp  bin.h  binary.cpp  binary.h  config.c  config.h  config.h.sample  main.ino  scheduler.cpp  scheduler.h  utils.c
IOT/main/tests/: .gitignore  CMakeLists.txt  Makefile  binary_tests.cpp  scheduler_tests.cpp
IOT/src/: Bin_0.h
Relay/: .prettierrc.json  README.md  index.js  package-lock.json  package.json  uuid.js
Relay/test/: mock_client.js
VA/: .gitignore  README.md
VA/Assets/Scenes/: MQTT Testing.unity  Main Scene.unity  Scale Test.unity  Simulation - Grouped Tiles.prefab  Simulation - Separate Tiles.prefab  Simulation - Two Tiles.prefab  Simulation Environment.prefab
VA/Assets/Scripts/: ARAvailibityChecker.cs  ActionsLauncher.cs  FrameRateLimiter.cs  GarbageTruckAI.cs  MqttController.cs  MqttTestObject.cs  OrdureXEvents.cs  RenderOnlyInEditor.cs  ScaledProjection.cs  SettingsManager.cs  SimulationStateManager.cs  SpriteBillboard.cs  SurfaceTile.cs  SurfaceTileManager.cs  TileConnector.cs  TrashServerEmulator.cs  UnityThreadExecutor.cs
VA/Assets/Surfaces/: ColliderTest.cs  (+5 more)
VA/ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
mosquitto/: mosquitto.conf  mqtt_passwd.example
(+84 files in other folders)
